Profile applications, cancel applications, open hackathon card on click in profile

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HackathonApp"
         tools:targetApi="31">
-        <activity android:name=".LoginActivity" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".MyApplicationsActivity" />
         <activity android:name=".ProfileActivity"/>
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".MainActivity"
+        <activity android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
